--- a/index.html
+++ b/index.html
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
-<html>
-   <head>
-       <meta charset="utf-8">
-       <title> My Page </title>
-   </head>
+<html lang="en">
 
-   <body>
-   		<h1>Yo</h1>
-   </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Web Homework: Home Page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#"><img class="home-thumb" src="images/1280px-World_Map_Icon.svg.png"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plots</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="windspeed.html">Windspeed</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="comparison.html">Comparison</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main role="main">
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">Summary: Latitude vs. X</h1>
+        <p>The purpose of this project was to analyze how weather changes as latitude approaches the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities.
+        </p>
+        <p>After assembling the dataset, we used Matplotlib to plot various aspects of weather vs. latitude. The factors we looked at were temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any notable trends.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <h2 class="display-4">Humidity</h2>
+          <p>
+              <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/Latitude vs Humidity.png"></a>
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <h2 class="display-4">Cloudiness</h2>
+          <p>
+              <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/Latitude vs Cloudiness.png"></a>
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <h2 class="display-4">Temperature</h2>
+          <p>
+              <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/Latitude vs Teperature.png"></a>
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <h2 class="display-4" style="white-space: nowrap">Wind Speed</h2>
+          <p>
+              <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/Latitude vs Wind Speed.png"></a>
+          </p>
+        </div>
+      </div>
+
+      <hr>
+
+    </div>
+    <!-- /container -->
+
+  </main>
+
+  <footer class="container">
+    <p>&copy; Chris Flint</p>
+  </footer>
+</body>
+
 </html>
