--- a/comparison.html
+++ b/comparison.html
@@ -58,13 +58,13 @@
           <div class="col-md-6">
             <h2 class="display-2">Humidity</h2>
 
-                <a  href="humidity.html" role="button"><img class="comp-thumb" src="images/Latitude vs Humidity.png"></a>
+                <a  href="humidity.html" role="button"><img class="comp-thumb" src="images/LatitudeVsHumidity.png"></a>
 
           </div>
           <div class="col-md-6">
             <h2 class="display-2">Cloudiness</h2>
             <p>
-                <a href="cloudiness.html" role="button"><img class="comp-thumb" src="images/Latitude vs Cloudiness.png"></a>
+                <a href="cloudiness.html" role="button"><img class="comp-thumb" src="images/LatitudeVsCloudness.png"></a>
             </p>
           </div>
         </div>
@@ -72,13 +72,13 @@
           <div class="col-md-6">
             <h2 class="display-2">Temperature</h2>
             <p>
-                <a  href="maxtemp.html" role="button"><img class="comp-thumb" src="images/Latitude vs Teperature.png"></a>
+                <a  href="maxtemp.html" role="button"><img class="comp-thumb" src="images/LatitudeVsTemperature.png"></a>
             </p>
           </div>
           <div class="col-md-6">
             <h2 class="display-2">Wind Speed</h2>
             <p>
-                <a  href="windspeed.html" role="button"><img class="comp-thumb" src="images/Latitude vs Wind Speed.png"></a>
+                <a  href="windspeed.html" role="button"><img class="comp-thumb" src="images/LatitudeVsWindSpeed.png"></a>
             </p>
           </div>
         </div>
