--- a/humidity.html
+++ b/humidity.html
@@ -55,8 +55,8 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class=col-md-7>
-              <img class="viz-thumb"  src="images/Latitude vs Humidity.png">
-            <p>Humidity does appear to increase as the latitudes approach the equator, which would result in hotter temperatures.
+              <img class="viz-thumb"  src="images/LatitudeVsHumidity.png">
+            <p>Humidity does appear to increase as the latitudes approach the equator, but the correlation is not as strong as for temperature.
               </p>  
             </div>
           <div class="col-md-5">
@@ -64,13 +64,13 @@
           <div class="col-sm-6">
             <h2 class="display-2">Humidity</h2>
             <p>
-                <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/Latitude vs Humidity.png"></a>
+                <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/LatitudeVsHumidity.png"></a>
             </p>
           </div>
           <div class="col-sm-6">
             <h2 class="display-2">Cloudiness</h2>
             <p>
-                <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/Latitude vs Cloudiness.png"></a>
+                <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/LatitudeVsCloudness.png"></a>
             </p>
           </div>
         </div>
@@ -78,13 +78,13 @@
           <div class="col-sm-6">
             <h2 class="display-2">Temperature</h2>
             <p>
-                <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/Latitude vs Teperature.png"></a>
+                <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/LatitudeVsTemperature.png"></a>
             </p>
           </div>
           <div class="col-sm-6">
             <h2 class="display-2">Wind Speed</h2>
             <p>
-                <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/Latitude vs Wind Speed.png"></a>
+                <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/LatitudeVsWindSpeed.png"></a>
             </p>
           </div>
         </div>
