--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
         <div class="col-md-3 col-sm-6">
           <h2 class="display-4">Humidity</h2>
           <p>
-              <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/Latitude vs Humidity.png"></a>
+              <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/LatitudeVsHumidity.png"></a>
           </p>
         </div>
         <div class="col-md-3 col-sm-6">
             <h2 class="display-4">Cloudiness</h2>
           <p>
-              <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/Latitude vs Cloudiness.png"></a>
+              <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/LatitudeVsCloudness.png"></a>
           </p>
         </div>
         <div class="col-md-3 col-sm-6">
             <h2 class="display-4">Temperature</h2>
           <p>
-              <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/Latitude vs Teperature.png"></a>
+              <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/LatitudeVsTemperature.png"></a>
           </p>
         </div>
         <div class="col-md-3 col-sm-6">
             <h2 class="display-4" style="white-space: nowrap">Wind Speed</h2>
           <p>
-              <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/Latitude vs Wind Speed.png"></a>
+              <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/LatitudeVsWindSpeed.png"></a>
           </p>
         </div>
       </div>
