--- a/windspeed.html
+++ b/windspeed.html
@@ -64,7 +64,7 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class=col-md-7>
-              <img class="viz-thumb" src="images/Latitude vs Wind Speed.png">
+              <img class="viz-thumb" src="images/LatitudeVsWindSpeed.png">
             <p>There appears to be a minimal correlation between wind speed and latitude. In the northern hemisphere the frequency of higher windspeeds increases with the latitude. This is true to a lesser extent in the southern hemisphere, although we would need more data to make a definitive conclusion.
               </p>  
             </div>
@@ -73,13 +73,13 @@
           <div class="col-sm-6">
             <h2 class="display-2">Humidity</h2>
             <p>
-                <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/Latitude vs Humidity.png"></a>
+                <a class="btn" href="humidity.html" role="button"><img class="viz-thumb" src="images/LatitudeVsHumidity.png"></a>
             </p>
           </div>
           <div class="col-sm-6">
             <h2 class="display-2">Cloudiness</h2>
             <p>
-                <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/Latitude vs Cloudiness.png"></a>
+                <a class="btn" href="cloudiness.html" role="button"><img class="viz-thumb" src="images/LatitudeVsCloudness.png"></a>
             </p>
           </div>
         </div>
@@ -87,13 +87,13 @@
           <div class="col-sm-6">
             <h2 class="display-2">Temperature</h2>
             <p>
-                <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/Latitude vs Teperature.png"></a>
+                <a class="btn" href="maxtemp.html" role="button"><img class="viz-thumb" src="images/LatitudeVsTemperature.png"></a>
             </p>
           </div>
           <div class="col-sm-6">
             <h2 class="display-2">Wind Speed</h2>
             <p>
-                <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/Latitude vs Wind Speed.png"></a>
+                <a class="btn" href="windspeed.html" role="button"><img class="viz-thumb" src="images/LatitudeVsWindSpeed.png"></a>
             </p>
           </div>
         </div>
